--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "multer": "0.1.8",
     "socket.io": "1.3.5",
     "socketio-jwt": "4.2.0",
-    "async": "~1.3.0"
+    "async": "~1.3.0",
+    "phantom": "~0.7.2"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
